--- a/how it works.html
+++ b/how it works.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="intro.css">
 </head>
 <body>
-    <header style="background-color: rgb(155, 19, 19);">
+    <header style="background-color: rgb(0, 128, 128)">
         <h1>How it Works</h1>
     </header>
     <p class="rainpara">Let's dive into the intricacies of rainwater harvesting. This technique plays a vital role in sustainable water management, especially in regions facing water scarcity.</p>
